--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-graphql": "^2.0.5",
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
   },
