--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-source-graphql": "^2.0.5",
     "gatsby-transformer-sharp": "^2.1.4",
+    "netlify-lambda": "^1.0.2",
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
@@ -24,7 +25,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build && netlify-lambda build ./functions",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
