--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  functions = "functions-build"
+  functions = "functions"
 
   # This will be run the site build
   command = "npm run build"
