--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-graphql": "^2.0.5",
     "gatsby-transformer-sharp": "^2.1.4",
     "netlify-lambda": "^1.0.2",
+    "node-fetch": "^2.2.0",
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
